<resources>
    <string name="app_name">opensrp-vaccinator</string>
    <string name="invalid_device_date">Device current datetime must be after last synced server datetime which was </string>
    <string name="home_women_label">Woman</string>
    <string name="home_field_monitor_label">Stock</string>
    <string name="child_entries">Child</string>
    <string name="child_profile">CHILD PROFILE</string>
    <string name="child_DOB">Date Of Birth</string>
    <string name="child_reminder">REMINDER</string>
    <string name="child_last_vaccine">LAST VACCINE(S)</string>
    <string name="child_next_vaacine">NEXT VACCINE(S) DUE</string>
    <string name="child_register_title">Child Register</string>
    <string name="register_search_hint">Search</string>
    <string name="child_title">Child</string>
    <string name="child_alphabetical_sort">Alphabetical (Child Name)</string>
    <string name="child_id_sort">Program Id </string>
    <string name="child_search_hint">Search Child</string>
    <string name="child_details_title"> Child Details</string>
    <string name="vaccination_summary"> Vaccination Summary</string>

    <string name="search_hint">Search Register</string>
    <string name="birthdate">DoB</string>
    <string name="age">AGE</string>
    <string name="uc">UC</string>
    <string name="town">Town</string>
    <string name="address">Address</string>
    <string name="birthdate_age">DOB (AGE)</string>
    <string name="epi_number">EPI CARD</string>
    <string name="child_contact_number">CONTACT</string>

    <string name="marital_status">Marital Status</string>


    <string name="woman_entries"></string>
    <string name="woman_register_title">Woman Register</string>

    <string name="str_woman_search_hint">Search Woman Register</string>
    <string name="woman_profile">WOMAN PROFILE</string>
    <string name="woman_title">Woman</string>
    <string name="woman_contact_number">CONTACT</string>
    <string name="woman_edd">EDD and GA</string>
    <string name="woman_last_vaccine">LAST VACCINE</string>
    <string name="woman_next_vaacine">NEXT VACCINE DUE</string>
    <string name="woman_alphabetical_sort">Alphabetical (Name)</string>
    <string name="id_sort">Program ID </string>
    <string name="woman_details_title">Woman Profile</string>
    <string name="day">DAY\n</string>
    <string name="bcg">BCG\n</string>
    <string name="opv">OPV\n</string>
    <string name="ipv">IPV\n</string>
    <string name="penta">PENTA\n</string>
    <string name="measles">MEASLES\n</string>
    <string name="pcv">PCV\n</string>
    <string name="tt">TT\n</string>
    <string name="total">TOTAL\n</string>
    <string name="used">USED</string>
    <string name="wasted">WASTED</string>

    <string name="month">MONTH</string>
    <string name="month_target">MONTHLY TARGET</string>
    <string name="month_received">STOCK RECEIVED</string>
    <string name="month_used">STOCK USED</string>
    <string name="month_wasted">STOCK WASTED</string>
    <string name="month_inhand">BALANCE IN HAND</string>
    <string name="stock_register_title">Stock Register</string>
    <string name="stock_register_monthly_view">Monthly</string>
    <string name="stock_register_daily_view">Daily</string>


    <string name="field_entries">Stock Register</string>
    <string name="field_title">Stock Register</string>
    <string name="str_field_search_hint">Search Register</string>
    <string name="pick_report">Report</string>
    <string name="field_details_title">Stock Position</string>
    <string name="title_activity_vaccine_report">VaccineReport</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="userNameText">User Name</string>
    <string name="passwordText">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="household_search_hint">Search Household Register</string>
    <string name="household_profile">Profiles of Households</string>
    <string name="household_members">No. of Members</string>
    <string name="household_address">Address</string>
    <string name="household_last_visit">Last Visit Date</string>
    <string name="household_due_date">Household Visit Due Date</string>
    <string name="household_title">Household</string>
    <string name="household_register_title">Household Register</string>
    <string name="person_id">Household ID</string>
    <string name="id">ID:</string>
    <string name="household_head">Household Head</string>
    <string name="name">Name:</string>
    <string name="register">Register</string>
    <string name="household_member_dob">DOB(Age):</string>
    <string name="gender">Gender</string>
    <string name="contactNumber">Contact Phone Number</string>
    <string name="household_profile_members">Number of Members</string>
    <string name="household_water">Source of Drinking Water</string>
    <string name="household_latrine">Latrine System</string>
    <string name="household_add_member">Add Member</string>
    <string name="household_relationship">Relationship:</string>
    <string name="household_alphabetical_sort">Alphabetical (Household Head Name)</string>


</resources>
