<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="fill_parent"
    android:weightSum="9"
    android:layout_height="@dimen/list_item_height">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:id="@+id/household_profile_info_layout"
        android:layout_weight="3"
        android:background="#ffffff"
        android:layout_marginRight="1dp">

        <ImageView
            android:layout_width="@dimen/client_profile_pic_width"
            android:layout_height="80dp"
            android:id="@+id/household_profilepic"
            android:src="@drawable/household_profile"
            android:layout_margin="2dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp">

            <org.ei.opensrp.view.customControls.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_id"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:id="@+id/household_id"
                android:textColor="@color/button_material_dark"
                android:textSize="14sp" />

            <org.ei.opensrp.view.customControls.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomFontTextViewStyle.ListView.Medium"
                android:text="@string/household_head"
                android:id="@+id/household_name"
                android:textColor="@color/light_blue"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:background="#ffffff"
        android:layout_marginRight="1dp">

        <org.ei.opensrp.view.customControls.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/household_members"
            style="@style/CustomFontTextViewStyle.ListView.Normal"
            android:id="@+id/household_member_count"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:background="#ffffff"
        android:layout_marginRight="1dp">

        <org.ei.opensrp.view.customControls.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/household_address"
            style="@style/CustomFontTextViewStyle.ListView.Normal.TwoLine"
            android:id="@+id/household_address"

            android:inputType="textMultiLine"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:background="#ffffff"
        android:layout_marginRight="1dp">

        <org.ei.opensrp.view.customControls.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/household_address"
            style="@style/CustomFontTextViewStyle.ListView.Normal"
            android:id="@+id/household_contact"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>