<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75">

            <ImageView
                android:id="@+id/individual_profilepic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:src="@drawable/household_profile"
                android:scaleType="fitXY" />

        </LinearLayout>

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:orientation="vertical"
    android:background="@color/White">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="@dimen/household_detail_activity"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memberId"
            android:paddingLeft="40sp"
            android:text="hello"
            android:textSize="13sp"
            android:textColor="@color/Black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/household_detail_activity"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memberName"
            android:paddingLeft="13dp"
            android:text="hello"
            android:textSize="13sp"
            android:textColor="@color/Black"/>

    </LinearLayout>


</LinearLayout>

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="2.55"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/household_member_dob"
            android:textSize="@dimen/household_detail_activity"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memberDate"
            android:text="hello"
            android:paddingLeft="10dp"
            android:textSize="13sp"
            android:textColor="@color/Black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/household_relationship"
            android:textSize="@dimen/household_detail_activity"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relationship"
            android:text="hello"
            android:paddingLeft="10dp"
            android:textSize="13sp"
            android:textColor="@color/Black"/>

    </LinearLayout>


</LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.25">

        <Button
            android:id="@+id/followup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Followup"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>